@@ -1,4 +1,11 @@
 
+Изменения в nginx 1.0.14                                          15.03.2012
+
+    *) Безопасность: содержимое ранее освобождённой памяти могло быть
+       отправлено клиенту, если бэкенд возвращал специально созданный ответ.
+       Спасибо Matthew Daley.
+
+
 Изменения в nginx 1.0.13                                          05.03.2012
 
     *) Добавление: директивы return и error_page теперь могут использоваться
